First commit, demo ready to show

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -16,3 +16,9 @@
 .markdown h3 {
   @apply text-2xl mt-8 mb-4 leading-snug;
 }
+
+.markdown blockquote {
+  @apply bg-gray-100;
+  @apply border rounded-xl;
+  @apply px-4;
+}
