--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -3,11 +3,12 @@
 }
 
 .markdown p,
-.markdown ul,
 .markdown ol,
 .markdown blockquote {
   @apply my-6;
 }
+
+
 
 .markdown h2 {
   @apply text-3xl mt-12 mb-4 leading-snug;
@@ -22,3 +23,10 @@
   @apply border rounded-xl;
   @apply px-4;
 }
+
+.markdown ul, {
+  @apply list-inside list-disc !important;
+  @apply ml-4;
+}
+
+
