--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.markdown-container ul{
+    @apply list-disc list-inside !important;
+}
+  
