--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-.markdown-container ul{
+.markdown-container ul {
     @apply list-disc list-outside !important;
+}
+
+.markdown-container li {
+    @apply text-2xl !important;
 }
   
