Fix li::marker display to be on the same row as the content

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,4 +9,9 @@
 .markdown-container li {
     @apply text-2xl !important;
 }
+
+li::marker {
+    display: inline !important;
+    vertical-align: middle;
+}
   
