--- a/styles/index.css
+++ b/styles/index.css
@@ -2,16 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.markdown-container ul {
-    @apply list-disc list-outside !important;
-}
 
 .markdown-container li {
-    @apply text-2xl !important;
-}
-
-li::marker {
-    display: inline !important;
-    vertical-align: middle !important;
+    @apply text-2xl ml-4 !important; 
 }
   
